# shizuru

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  ROADMAP.md
.kiro/specs/flutter-ui/: design.md  requirements.md  tasks.md
.kiro/specs/runtime-io-redesign/: design.md
api/: CMakeLists.txt  shizuru_api.cpp  shizuru_api.h
core/: CMakeLists.txt
core/context/: context_strategy.cpp  types.h
core/controller/: config.h  controller.cpp  controller.h  types.h
core/policy/: policy_layer.cpp  types.h
core/session/: session.cpp  session.h
core/strategies/: llm_observation_aggregator.cpp  llm_observation_aggregator.h  llm_observation_filter.cpp  llm_observation_filter.h  observation_aggregator.h  observation_filter.h  response_filter.h  tts_segment_strategy.h
examples/: CMakeLists.txt  asr_tts_echo_pipeline.cpp  baidu_voice_test.cpp  elevenlabs_tts_playout.cpp  tool_call.cpp  tts_playout.cpp  voice_agent.cpp  voice_pipeline.cpp  wav_playout.cpp
io/asr/baidu/: CMakeLists.txt  baidu_asr_device.cpp  baidu_asr_device.h
io/audio/: CMakeLists.txt  audio_capture_device.cpp  audio_capture_device.h  audio_playout_device.cpp  audio_playout_device.h
io/audio/audio_device/oboe/: oboe_player.h  oboe_recorder.h
io/audio/audio_device/port_audio/: pa_init.cpp  pa_player.h  pa_recorder.h
io/probe/: CMakeLists.txt  log_device.cpp  log_device.h
io/tts/baidu/: CMakeLists.txt  baidu_tts_device.cpp  baidu_tts_device.h
io/tts/elevenlabs/: CMakeLists.txt  elevenlabs_tts_device.cpp  elevenlabs_tts_device.h
runtime/: agent_runtime.cpp  agent_runtime.h  core_device.cpp  core_device.h  route_table.h  tool_dispatch_device.cpp
services/: CMakeLists.txt
services/asr/baidu/: CMakeLists.txt  baidu_asr_client.cpp
services/audit/: log_audit_sink.h
services/io/: tool_dispatcher.cpp  tool_dispatcher.h
services/llm/: CMakeLists.txt  config.h  json_parser.cpp  openai_client.cpp
services/llm/openai/: CMakeLists.txt  json_parser.cpp  json_parser.h  openai_client.cpp  openai_client.h
services/tts/: CMakeLists.txt  config.h  elevenlabs_client.cpp  elevenlabs_client.h  tts_client.h
services/tts/baidu/: CMakeLists.txt  baidu_tts_client.cpp
services/tts/elevenlabs/: CMakeLists.txt  elevenlabs_client.cpp
services/utils/: curl_helper.h
services/utils/baidu/: CMakeLists.txt  baidu_token_manager.cpp
tests/: test_utils.h
tests/agent/: CMakeLists.txt  context_strategy_test.cpp  controller_bug_condition_test.cpp  controller_preservation_test.cpp  controller_prop_test.cpp  controller_test.cpp  strategy_test.cpp
tests/io/: CMakeLists.txt
tests/runtime/: CMakeLists.txt  agent_runtime_bug_condition_test.cpp  agent_runtime_integration_test.cpp  agent_runtime_prop_test.cpp  agent_runtime_test.cpp  core_device_prop_test.cpp  core_device_test.cpp  mock_io_device.h  route_table_prop_test.cpp  route_table_test.cpp
tests/services/: CMakeLists.txt  asr_device_prop_test.cpp  elevenlabs_tts_device_test.cpp  json_parser_test.cpp  openai_client_test.cpp
tests/vad/: CMakeLists.txt
tools/: ttfa_latency.py
ui/: BUILD_MACOS.md  BUILD_WINDOWS.md  pubspec.yaml
ui/android/app/: build.gradle.kts
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/example/shizuru_ui/: MainActivity.kt
ui/bridge/: CMakeLists.txt  shizuru_bridge.cpp  shizuru_bridge.h
ui/lib/: main.dart
ui/lib/bridge/: activity_kind.dart  agent_state.dart  audio_service.dart  bridge_config.dart  shizuru_bridge.dart  shizuru_ffi.dart
ui/lib/pages/: settings_page.dart
ui/lib/providers/: agent_provider.dart  app_provider.dart  conversation_provider.dart
ui/lib/screens/: conversation_screen.dart  settings_screen.dart
ui/lib/widgets/: debug_panel.dart  input_bar.dart  message_bubble.dart  state_indicator.dart  waveform_bar.dart
ui/macos/: copy_bridge.sh
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/windows/: CMakeLists.txt
utils/: CMakeLists.txt  async_logger.cpp
